--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -27,7 +27,6 @@ on:
       HELM_ROLLOUT_TIMEOUT:
         default: "600s"
         type: string
-        required: true
       HELM_VALUES:
         type: string
         required: true
@@ -35,12 +34,6 @@ on:
         type: string
         required: true
       HELM_CHART_VERSION:
-        type: string
-        required: true
-      GITHUB_REPO_USERNAME:
-        type: string
-        required: true
-      GITHUB_REPO_PASSWORD:
         type: string
         required: true
       GTIHUB_ACTIONS_EMAIL:
@@ -53,15 +46,15 @@ on:
         type: string
         required: true
       GITHUB_BRANCH:
+        default: "master"
         type: string
-        required: true
       README_URL:
         type: string
         required: true
     secrets:
       README_IO_API_KEY:
         required: true
-      HELM_REPOSITORY:
+      HELM_REGISTRY:
         required: true
       ACTIONS_SSH_KEY:
         required: true
@@ -71,7 +64,14 @@ on:
         required: true
       CC_TEST_REPORTER_ID:
         required: true
-      
+      GITHUB_REPO_USERNAME:
+        required: true
+      GITHUB_REPO_PASSWORD:
+        required: true
+
+env:
+  GITHUB_REPO_USERNAME: ${{ secrets.GITHUB_REPO_USERNAME }}
+  GITHUB_REPO_PASSWORD: ${{ secrets.GITHUB_REPO_PASSWORD }}
 
 jobs:
   formatting:
@@ -163,7 +163,7 @@ jobs:
         uses: paambaati/codeclimate-action@v2.6.0
         env:
           # Set CC_TEST_REPORTER_ID as secret of your repo
-          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          CC_TEST_REPORTER_ID: ${{secrets.secrets.HELM_REGISTRY}}
           JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
         with:
           # The report file must be there, otherwise Code Climate won't find it
@@ -176,7 +176,7 @@ jobs:
         with:
           file: target/openapi.json
           field: servers
-          value: '[{"url":"https://gateway.staging.transferz.com/customer-service","description":"Staging environment"},{"url":"https://gateway.transferz.com/customer-service","description":"Live environment"}]'
+          value: ${{ inputs.GATEWAY_URLS }}
           parse_json: true
       - name: Upload OpenAPI spec
         uses: actions/upload-artifact@v1
@@ -271,7 +271,7 @@ jobs:
         run: |
           echo "${{ secrets.GCP_ACCOUNT_KEY }}" | helm registry login --username ${{ secrets.GCP_ACCOUNT_USER }} --password-stdin
 
-          if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${IMAGE_TAG}" ${{ secrets.HELM_REPOSITORY }}/${{ inputs.HELM_CHART }}; then
+          if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${IMAGE_TAG}" ${{ secrets.HELM_REGISTRY }}/${{ inputs.HELM_CHART }}; then
             kubectl -n ${{ inputs.HELM_NAMESPACE }} describe po -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }}
             kubectl -n ${{ inputs.HELM_NAMESPACE }} logs --tail=2000 -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }} --all-containers || true
             helm -n ${{ inputs.HELM_NAMESPACE }} rollback ${{ github.event.repository.name }} 0
