--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -197,7 +197,7 @@ jobs:
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
       - name: Get Release version
-        if: github.ref == "refs/heads/master"
+        if: github.ref == 'refs/heads/master'
         id: version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
     
