--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -262,6 +262,10 @@ jobs:
           ref: ${{ inputs.GITHUB_BRANCH}}
           ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
 
+      - name: Configure the docker credentials   
+        run: |
+          gcloud container clusters get-credentials ${{ inputs.GKE_NAME }} --zone ${{ inputs.GKE_ZONE }} --project ${{ inputs.GKE_PROJECT }}
+      
       - name: Deploy to K8S
         env:
           IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
