--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -302,7 +302,7 @@ jobs:
           ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
 
       - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v1
         with:
           version: '297.0.0'
           service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
