--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -225,9 +225,8 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests -Dspotbugs.skip=true --settings .github/settings.xml
 
-      
       - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: '297.0.0'
           service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
@@ -263,7 +262,7 @@ jobs:
           ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
 
       - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           version: '297.0.0'
           service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
