--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -78,6 +78,7 @@ env:
 
 jobs:
   formatting:
+    if: github.ref == 'refs/heads/feature/*' || github.ref == 'refs/heads/master'
     name: Check code formatting
     runs-on: ubuntu-20.04
 
@@ -98,6 +99,7 @@ jobs:
         run: mvn -B clean spotless:check --settings .github/settings.xml
 
   spotbugs:
+    if: github.ref == 'refs/heads/feature/*' || github.ref == 'refs/heads/master'
     name: Check for bugs
     runs-on: ubuntu-20.04
 
@@ -125,6 +127,7 @@ jobs:
           path: target/site/*
 
   test:
+    if: github.ref == 'refs/heads/feature/*' || github.ref == 'refs/heads/master'
     name: Run unit & integration tests
     runs-on: ubuntu-20.04
     needs: [formatting, spotbugs]
@@ -186,6 +189,7 @@ jobs:
           path: target/openapi.json
       
   define-vairables:
+    if: github.ref == 'refs/tags/*' || github.ref == 'refs/heads/master'
     name: Retrive Variables
     runs-on: ubuntu-20.04
     steps:
@@ -205,6 +209,7 @@ jobs:
       version: ${{ steps.version.outputs.VERSION }}
 
   build:
+    if: github.ref == 'refs/heads/master'
     name: Build
     runs-on: ubuntu-20.04
     needs: ["define-vairables", "test"]
@@ -248,6 +253,7 @@ jobs:
       IMAGE_TAG: ${{ steps.vars.outputs.sha_short }}
   
   deploy-staging:
+    if: github.ref == 'refs/heads/master'
     name: Deploy to staging
     runs-on: ubuntu-20.04
     needs: ["build", "define-vairables"]
@@ -336,6 +342,7 @@ jobs:
           fi
 
   publish-docs:
+    if: github.ref == 'refs/heads/master'
     name: Publish documentation to Readme.io
     runs-on: ubuntu-latest
     needs: [ "deploy-staging" ]
