--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -38,7 +38,7 @@ on:
         required: true
       HELM_CHART:
         type: string
-        default: "service" 
+        default: "0.1.0"
       HELM_CHART_VERSION:
         type: string
         required: true
