--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -1,4 +1,4 @@
-name: Node Workflow
+name: Node Workflow | Staging
 
 on:
   workflow_call:
@@ -49,6 +49,12 @@ on:
         type: string
         required: true
     secrets:
+      GITHUB_TOKEN:
+        required: true
+      GITHUB_REPO_USERNAME:
+        required: true
+      GITHUB_REPO_PASSWORD:
+        required: true
       GCP_ACCOUNT_KEY:
         required: true
 
@@ -85,17 +91,17 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      # - name: Gcloud Authentication
-      #   uses: google-github-actions/auth@v0
-      #   with:
-      #     credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
+      - name: Gcloud Authentication
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
 
       - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: '297.0.0'
-          service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
+          # service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
+          # service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
       
       - name: Configure the docker credentials
         run: |
@@ -129,17 +135,17 @@ jobs:
           ref: ${{ inputs.GITHUB_BRANCH}}
           ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
 
-      # - name: Gcloud Authentication
-      #   uses: google-github-actions/auth@v0
-      #   with:
-      #     credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
+      - name: Gcloud Authentication
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
 
       - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: '297.0.0'
-          service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
+          # service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
+          # service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
 
       - name: Configure the docker credentials
         run: |
@@ -148,62 +154,6 @@ jobs:
       - name: Deploy to K8S
         env:
           IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
-        run: |
-          echo "${{ secrets.GCP_ACCOUNT_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ inputs.GCP_ACCOUNT_USER }} --password-stdin
-
-          if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${IMAGE_TAG}" oci://${{ inputs.HELM_REGISTRY }}/${{ inputs.HELM_CHART }} --version ${{ inputs.HELM_CHART_VERSION }}; then
-            kubectl -n ${{ inputs.HELM_NAMESPACE }} describe po -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }}
-            kubectl -n ${{ inputs.HELM_NAMESPACE }} logs --tail=2000 -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }} --all-containers || true
-            helm -n ${{ inputs.HELM_NAMESPACE }} rollback ${{ github.event.repository.name }} 0
-            exit 1
-          fi
-
-  deploy-production:
-    if: github.ref == 'refs/tags/**' && !contains(github.event.head_commit.message, 'skip ci')
-    name: Deploy to Production
-    runs-on: ubuntu-18.04
-    needs: [ "define-vairables" ]
-    steps:
-      - uses: actions/checkout@v1
-
-      - uses: actions/checkout@v2
-        with:
-          repository: '${{ inputs.GITHUB_ORG }}/${{ inputs.HELM_REPOSITORY }}'
-          path: ${{ inputs.HELM_REPOSITORY }}
-          ref: ${{ inputs.GITHUB_BRANCH}}
-          ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
-
-      # - name: Gcloud Authentication
-      #   uses: google-github-actions/auth@v0
-      #   with:
-      #     credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
-
-      - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          version: '297.0.0'
-          service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
-
-      - name: Configure the docker credentials
-        run: |
-          gcloud auth configure-docker ${{ inputs.GKE_ZONE }} --quiet
-          gcloud container clusters get-credentials ${{ inputs.GKE_NAME }} --zone ${{ inputs.GKE_ZONE }} --project ${{ inputs.GKE_PROJECT }}
-      
-      - name: Download and retag application Docker image
-        id: retag-image
-        env:
-          IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
-          VERSION_TAG: ${{ needs.define-vairables.outputs.version }} 
-        run: |
-          docker pull ${{ inputs.GCR_REGISTRY }}}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG}
-          docker image tag ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG} ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
-          docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
-
-      - name: Deploy to K8S
-        env:
-          IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
-          VERSION_TAG: ${{ needs.define-vairables.outputs.version }} 
         run: |
           echo "${{ secrets.GCP_ACCOUNT_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ inputs.GCP_ACCOUNT_USER }} --password-stdin
 
