--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -49,7 +49,7 @@ on:
         type: string
         required: true
     secrets:
-      GITHUB_TOKEN:
+      GITHUB_TOKEN_STRING:
         required: true
       GITHUB_REPO_USERNAME:
         required: true
@@ -117,7 +117,7 @@ jobs:
         env:
           IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
         run: |
-          docker build --build-arg npm_token=${{ secrets.GITHUB_TOKEN }} --build-arg COMMIT=${IMAGE_TAG} -t $GCR_REGISTRY/$GCR_REPOSITORY:${IMAGE_TAG} .
+          docker build --build-arg npm_token=${{ secrets.GITHUB_TOKEN_STRING }} --build-arg COMMIT=${IMAGE_TAG} -t $GCR_REGISTRY/$GCR_REPOSITORY:${IMAGE_TAG} .
           docker push $GCR_REGISTRY/$GCR_REPOSITORY:${IMAGE_TAG}
   
   deploy-staging:
