--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -55,6 +55,8 @@ on:
         required: true
       GITHUB_REPO_PASSWORD:
         required: true
+      ACTIONS_SSH_KEY:
+        required: true
       GCP_ACCOUNT_KEY:
         required: true
 
